// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button > render correctly with buttonType prop 1`] = `
<div>
  <button
    class="flex flex-row gap-x-4 disabled:cursor-not-allowed items-center justify-center cv-bg-gray-200 cv-text-gray-600 cv-border-gray-200 hover:cv-bg-gray-300 cv-text-base cv-py-2 cv-px-4 cv-rounded-md"
    type="button"
  />
</div>
`;

exports[`Button > render correctly with buttonType prop 2`] = `
<div>
  <button
    class="flex flex-row gap-x-4 disabled:cursor-not-allowed items-center justify-center cv-bg-violet-500 cv-text-white cv-border-violet-500 hover:cv-bg-violet-600 cv-text-base cv-py-2 cv-px-4 cv-rounded-md"
    type="button"
  />
</div>
`;

exports[`Button > render correctly with buttonType prop 3`] = `
<div>
  <button
    class="flex flex-row gap-x-4 disabled:cursor-not-allowed items-center justify-center cv-bg-yellow-500 cv-text-white cv-border-yellow-500 hover:cv-bg-yellow-600 cv-text-base cv-py-2 cv-px-4 cv-rounded-md"
    type="button"
  />
</div>
`;

exports[`Button > render correctly with buttonType prop 4`] = `
<div>
  <button
    class="flex flex-row gap-x-4 disabled:cursor-not-allowed items-center justify-center cv-bg-white cv-text-gray-600 hover:cv-bg-gray-100 cv-border hover:cv-border-gray-100 cv-border-gray-300 hover:cv-shadow-md cv-text-base cv-py-2 cv-px-4 cv-rounded-md"
    type="button"
  />
</div>
`;

exports[`Button > render correctly with buttonType prop 5`] = `
<div>
  <button
    class="flex flex-row gap-x-4 disabled:cursor-not-allowed items-center justify-center cv-bg-black cv-text-white cv-border-black cv-cursor-not-allowed cv-text-base cv-py-2 cv-px-4 cv-rounded-md"
    type="button"
  />
</div>
`;

exports[`Button > render correctly with buttonType prop 6`] = `
<div>
  <button
    class="flex flex-row gap-x-4 disabled:cursor-not-allowed items-center justify-center cv-bg-red-500 cv-text-white cv-border-red-500 hover:cv-bg-red-600 cv-text-base cv-py-2 cv-px-4 cv-rounded-md"
    type="button"
  />
</div>
`;

exports[`Button > render correctly with rounded prop 1`] = `
<div>
  <button
    class="flex flex-row gap-x-4 disabled:cursor-not-allowed items-center justify-center cv-bg-violet-500 cv-text-white cv-border-violet-500 hover:cv-bg-violet-600 cv-text-base cv-py-2 cv-px-4 cv-rounded-full"
    type="button"
  />
</div>
`;

exports[`Button > render correctly with rounded prop 2`] = `
<div>
  <button
    class="flex flex-row gap-x-4 disabled:cursor-not-allowed items-center justify-center cv-bg-violet-500 cv-text-white cv-border-violet-500 hover:cv-bg-violet-600 cv-text-base cv-py-2 cv-px-4 cv-rounded-lg"
    type="button"
  />
</div>
`;

exports[`Button > render correctly with rounded prop 3`] = `
<div>
  <button
    class="flex flex-row gap-x-4 disabled:cursor-not-allowed items-center justify-center cv-bg-violet-500 cv-text-white cv-border-violet-500 hover:cv-bg-violet-600 cv-text-base cv-py-2 cv-px-4 cv-rounded-none"
    type="button"
  />
</div>
`;

exports[`Button > render correctly with rounded prop 4`] = `
<div>
  <button
    class="flex flex-row gap-x-4 disabled:cursor-not-allowed items-center justify-center cv-bg-violet-500 cv-text-white cv-border-violet-500 hover:cv-bg-violet-600 cv-text-base cv-py-2 cv-px-4 cv-rounded-xl"
    type="button"
  />
</div>
`;

exports[`Button > render correctly with rounded prop 5`] = `
<div>
  <button
    class="flex flex-row gap-x-4 disabled:cursor-not-allowed items-center justify-center cv-bg-violet-500 cv-text-white cv-border-violet-500 hover:cv-bg-violet-600 cv-text-base cv-py-2 cv-px-4 cv-rounded-2xl"
    type="button"
  />
</div>
`;

exports[`Button > render correctly with rounded prop 6`] = `
<div>
  <button
    class="flex flex-row gap-x-4 disabled:cursor-not-allowed items-center justify-center cv-bg-violet-500 cv-text-white cv-border-violet-500 hover:cv-bg-violet-600 cv-text-base cv-py-2 cv-px-4 cv-rounded-md"
    type="button"
  />
</div>
`;

exports[`Button > render correctly with rounded prop 7`] = `
<div>
  <button
    class="flex flex-row gap-x-4 disabled:cursor-not-allowed items-center justify-center cv-bg-violet-500 cv-text-white cv-border-violet-500 hover:cv-bg-violet-600 cv-text-base cv-py-2 cv-px-4 cv-rounded-sm"
    type="button"
  />
</div>
`;

exports[`Button > renders correctly with left icon 1`] = `
<div>
  <button
    class="flex flex-row gap-x-4 disabled:cursor-not-allowed items-center justify-center cv-bg-violet-500 cv-text-white cv-border-violet-500 hover:cv-bg-violet-600 cv-text-base cv-py-2 cv-px-4 cv-rounded-md"
    type="button"
  >
    <span>
      👈
    </span>
  </button>
</div>
`;

exports[`Button > renders correctly with right icon 1`] = `
<div>
  <button
    class="flex flex-row gap-x-4 disabled:cursor-not-allowed items-center justify-center cv-bg-violet-500 cv-text-white cv-border-violet-500 hover:cv-bg-violet-600 cv-text-base cv-py-2 cv-px-4 cv-rounded-md"
    type="button"
  >
    <span>
      👉
    </span>
  </button>
</div>
`;

exports[`Button - 1 > render correctly with buttonType prop 1`] = `
<div>
  <button
    class="flex flex-row gap-x-4 disabled:cursor-not-allowed items-center justify-center cv-bg-gray-200 cv-text-gray-600 cv-border-gray-200 hover:cv-bg-gray-300 cv-text-base cv-py-2 cv-px-4 cv-rounded-md"
    type="button"
  />
</div>
`;

exports[`Button - 1 > render correctly with buttonType prop 2`] = `
<div>
  <button
    class="flex flex-row gap-x-4 disabled:cursor-not-allowed items-center justify-center cv-bg-violet-500 cv-text-white cv-border-violet-500 hover:cv-bg-violet-600 cv-text-base cv-py-2 cv-px-4 cv-rounded-md"
    type="button"
  />
</div>
`;

exports[`Button - 1 > render correctly with buttonType prop 3`] = `
<div>
  <button
    class="flex flex-row gap-x-4 disabled:cursor-not-allowed items-center justify-center cv-bg-yellow-500 cv-text-white cv-border-yellow-500 hover:cv-bg-yellow-600 cv-text-base cv-py-2 cv-px-4 cv-rounded-md"
    type="button"
  />
</div>
`;

exports[`Button - 1 > render correctly with buttonType prop 4`] = `
<div>
  <button
    class="flex flex-row gap-x-4 disabled:cursor-not-allowed items-center justify-center cv-bg-white cv-text-gray-600 hover:cv-bg-gray-100 cv-border hover:cv-border-gray-100 cv-border-gray-300 hover:cv-shadow-md cv-text-base cv-py-2 cv-px-4 cv-rounded-md"
    type="button"
  />
</div>
`;

exports[`Button - 1 > render correctly with buttonType prop 5`] = `
<div>
  <button
    class="flex flex-row gap-x-4 disabled:cursor-not-allowed items-center justify-center cv-bg-black cv-text-white cv-border-black cv-cursor-not-allowed cv-text-base cv-py-2 cv-px-4 cv-rounded-md"
    type="button"
  />
</div>
`;

exports[`Button - 1 > render correctly with buttonType prop 6`] = `
<div>
  <button
    class="flex flex-row gap-x-4 disabled:cursor-not-allowed items-center justify-center cv-bg-red-500 cv-text-white cv-border-red-500 hover:cv-bg-red-600 cv-text-base cv-py-2 cv-px-4 cv-rounded-md"
    type="button"
  />
</div>
`;

exports[`Button - 1 > render correctly with rounded prop 1`] = `
<div>
  <button
    class="flex flex-row gap-x-4 disabled:cursor-not-allowed items-center justify-center cv-bg-violet-500 cv-text-white cv-border-violet-500 hover:cv-bg-violet-600 cv-text-base cv-py-2 cv-px-4 cv-rounded-full"
    type="button"
  />
</div>
`;

exports[`Button - 1 > render correctly with rounded prop 2`] = `
<div>
  <button
    class="flex flex-row gap-x-4 disabled:cursor-not-allowed items-center justify-center cv-bg-violet-500 cv-text-white cv-border-violet-500 hover:cv-bg-violet-600 cv-text-base cv-py-2 cv-px-4 cv-rounded-lg"
    type="button"
  />
</div>
`;

exports[`Button - 1 > render correctly with rounded prop 3`] = `
<div>
  <button
    class="flex flex-row gap-x-4 disabled:cursor-not-allowed items-center justify-center cv-bg-violet-500 cv-text-white cv-border-violet-500 hover:cv-bg-violet-600 cv-text-base cv-py-2 cv-px-4 cv-rounded-none"
    type="button"
  />
</div>
`;

exports[`Button - 1 > render correctly with rounded prop 4`] = `
<div>
  <button
    class="flex flex-row gap-x-4 disabled:cursor-not-allowed items-center justify-center cv-bg-violet-500 cv-text-white cv-border-violet-500 hover:cv-bg-violet-600 cv-text-base cv-py-2 cv-px-4 cv-rounded-xl"
    type="button"
  />
</div>
`;

exports[`Button - 1 > render correctly with rounded prop 5`] = `
<div>
  <button
    class="flex flex-row gap-x-4 disabled:cursor-not-allowed items-center justify-center cv-bg-violet-500 cv-text-white cv-border-violet-500 hover:cv-bg-violet-600 cv-text-base cv-py-2 cv-px-4 cv-rounded-2xl"
    type="button"
  />
</div>
`;

exports[`Button - 1 > render correctly with rounded prop 6`] = `
<div>
  <button
    class="flex flex-row gap-x-4 disabled:cursor-not-allowed items-center justify-center cv-bg-violet-500 cv-text-white cv-border-violet-500 hover:cv-bg-violet-600 cv-text-base cv-py-2 cv-px-4 cv-rounded-md"
    type="button"
  />
</div>
`;

exports[`Button - 1 > render correctly with rounded prop 7`] = `
<div>
  <button
    class="flex flex-row gap-x-4 disabled:cursor-not-allowed items-center justify-center cv-bg-violet-500 cv-text-white cv-border-violet-500 hover:cv-bg-violet-600 cv-text-base cv-py-2 cv-px-4 cv-rounded-sm"
    type="button"
  />
</div>
`;

exports[`Button - 1 > renders correctly with left icon 1`] = `
<div>
  <button
    class="flex flex-row gap-x-4 disabled:cursor-not-allowed items-center justify-center cv-bg-violet-500 cv-text-white cv-border-violet-500 hover:cv-bg-violet-600 cv-text-base cv-py-2 cv-px-4 cv-rounded-md"
    type="button"
  >
    <span>
      👈
    </span>
  </button>
</div>
`;

exports[`Button - 1 > renders correctly with right icon 1`] = `
<div>
  <button
    class="flex flex-row gap-x-4 disabled:cursor-not-allowed items-center justify-center cv-bg-violet-500 cv-text-white cv-border-violet-500 hover:cv-bg-violet-600 cv-text-base cv-py-2 cv-px-4 cv-rounded-md"
    type="button"
  >
    <span>
      👉
    </span>
  </button>
</div>
`;
